--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.46.1",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "next-sanity": "^9.3.10",
     "react": "^18",
     "react-dom": "^18",
