--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,54 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node.js dependencies
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
+.yarn
+.yarnrc
+.yarnrc.yml
+.yarnignore
 
-# testing
+# Testing coverage
 /coverage
 
-# next.js
-/.next/
-/out/
+# Next.js build output
+/.next
+/out
 
-# production
+# Production build directory
 /build
 
-# misc
+# Miscellaneous
 .DS_Store
 *.pem
 
-# debug
+# Debugging logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# Local environment variables
+.env.local
 
-# vercel
+# Vercel specific
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-# env
-.env
+# Editor/IDE files
+.vscode
+.idea
 
-# distribution
+# Custom directories (if any)
 /dist
+
+# Ignore package-lock.json for npm
+package-lock.json
+
+# Ignore yarn.lock for yarn
+yarn.lock
+
+# Ignore cache and workspace-specific files
+.cache/
+*.log
