--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     },
     "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/molecules/Sidebar/Sidebar.js", "app/molecules/Sidebar/MenuBarMobile.js"],
   "exclude": ["node_modules"]
 }
